# sdr-ofdm-ip-protocol

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yaml
config/: sdr.conf  soip.service.in
include/: bridges.hpp  buffers.hpp  cli.hpp  common.hpp  config.hpp  logger.hpp  sockets.hpp
include/gui/: app.hpp  ip_dev.hpp  phy_dev.hpp
include/ip/: bit_utils.hpp  crc.hpp  fec_codec.hpp  ip_layer.hpp  ip_nat.hpp  tun_layer.hpp
include/phy/: dsp.hpp  phy_layer.hpp  sdr.hpp
packaging/: 99-plutosdr.rules  postinst
src/: bridges.cpp  cli.cpp  config.cpp  gui.cpp  logger.cpp  main.cpp  sockets.cpp
src/gui/: app.cpp  gui_layer.cpp  ip_dev.cpp  phy_dev.cpp
src/ip/: bit_utils.cpp  crc.cpp  fec_codec.cpp  ip_layer.cpp  ip_nat.cpp  tun_layer.cpp
src/phy/: dsp.cpp  phy_layer.cpp  sdr.cpp
